@@ -295,6 +295,8 @@ let ( !* ) = Lazy.force
 
 let ( @:= ) ref list = ref := !ref @ list
 
+let ( & ) f x = f x
+
 let print_string_list = List.print String.print
 
 module Digest = struct
